--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,7 +1,17 @@
 <template name="home">
     <div class="row">
+        <div class="col-md-6">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search for...">
+                  <span class="input-group-btn">
+                    <button class="btn btn-success" type="button">Search</button>
+                  </span>
+            </div><!-- /input-group -->
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-12">
-            Trang chu.
+
         </div>
     </div>
 </template>
